# HakatonFamnitGDGGGGG

./: .gitignore  CLAUDE.md  CODEX_INSTURCTIONS.txt  README.md  README_for_coding_agent.txt  package-lock.json  pattern_catalog.py  pyproject.toml  readme.md  run_phaseguard.ps1
.claude/: agents.md  settings.local.json
VanishingSorou/: Manifest.toml  Project.toml
VanishingSorou/src/: VanishingSorou.jl  algorithm1_types.jl  algorithm2_sorou.jl  core.jl  decompose.jl  exact_value.jl  examples.jl  invariants.jl  prop23.jl  types.jl
VanishingSorou/test/: runtests.jl
data/: conjectural_types_weight_le_21.json  known_types_weight_le_16.json
data/phaseguard_samples/: phaseguard_sample_analysis.json
phaseguard/: app.py  audio_processing.py  pattern_catalog.py  pattern_matching.py  requirements.txt  visualization.py
sea-oasis-citizen-monitor/: package-lock.json  package.json
sea-oasis-citizen-monitor/app/: globals.css  layout.tsx  page.tsx
sea-oasis-citizen-monitor/components/: AppShell.tsx  BiodiversityTimeline.tsx  ChecklistProgress.tsx  EmptyState.tsx  ExportButtons.tsx  GrowthPlateTracker.tsx  HabitatTagSelector.tsx  Hero.tsx  (+19 more)
tests/: test_canonical.py  test_cli_defaults.py  test_cyclotomic.py  test_known_weight_le_16.py  test_minimality_and_partitions.py  test_minimality_bruteforce.py  test_minimality_recursive.py  test_parser_and_fixtures.py  test_partitions.py  test_phaseguard_api.py  test_phaseguard_pipeline.py  test_regressions.py  test_root.py  test_roots.py  test_sorou.py  test_type_generation.py  test_value_signature.py  test_vanishing.py
(+97 files in other folders)
