[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "sorou-classifier"
version = "0.1.0"
description = "Classifier for minimal vanishing sums of roots of unity"
requires-python = ">=3.10"
dependencies = ["fastapi", "uvicorn", "numpy", "scipy"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
